# ques

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
beta_dataplane/: .dockerignore  Cargo.toml  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml
beta_dataplane/config/: beta-dataplane.toml  environment.example  providers.toml
beta_dataplane/docker/: prometheus.yml
beta_dataplane/docker/grafana/dashboards/: dashboard.yml
beta_dataplane/docker/grafana/datasources/: prometheus.yml
beta_dataplane/docs/: API_KEYS.md  DEPLOYMENT.md  README.md
beta_dataplane/scripts/: deploy-production.sh  health-check.sh  setup_api_keys.sh
beta_dataplane/src/: config.rs  error.rs  lib.rs  main.rs
beta_dataplane/src/extractors/: mod.rs  traits.rs
beta_dataplane/src/extractors/amm/: balancer.rs  curve.rs  mod.rs  uniswap_v3.rs
beta_dataplane/src/extractors/bridges/: across.rs  canonical.rs  hop.rs  mod.rs
beta_dataplane/src/extractors/flash_loans/: aave_v3.rs  balancer.rs  mod.rs
beta_dataplane/src/extractors/gas/: mod.rs  prediction.rs  pricing.rs
beta_dataplane/src/feeds/: grpc.rs  kafka.rs  manager.rs  mod.rs  parquet.rs  traits.rs
beta_dataplane/src/monitoring/: alerts.rs  dashboard.rs  health.rs  metrics.rs  mod.rs
beta_dataplane/src/optimization/: batching.rs  caching.rs  compression.rs  metrics.rs  mod.rs  prediction.rs
beta_dataplane/src/providers/: api_keys.rs  arbitrum.rs  base.rs  ethereum.rs  failover.rs  mod.rs  multi_rpc.rs  optimism.rs  rate_limiter.rs  websocket.rs
beta_dataplane/src/utils/: contracts.rs  mod.rs
beta_dataplane/tests/: basic_integration_tests.rs  integration_tests.rs  test_live_extraction.rs
beta_dataplane/tests/integration/: end_to_end_test.rs  mod.rs  monitoring_test.rs  optimization_test.rs
beta_dataplane/tests/test_utils/: mod.rs
dataplane/: Cargo.toml  README.md
dataplane/reth_fork/: Cargo.toml
dataplane/reth_fork/config/: qenus-reth.toml
dataplane/reth_fork/src/: config.rs  error.rs  execution.rs  extractors.rs  feeds.rs  lib.rs  main.rs  node.rs  state.rs  sync.rs
dataplane/src/: config.rs  error.rs  lib.rs  main.rs  types.rs  utils.rs
dataplane/src/extractors/: mod.rs  traits.rs
dataplane/src/feeds/: mod.rs  traits.rs
dataplane/src/observers/: base.rs  mod.rs  traits.rs
docs/: dataplane_build_plan.md
intelligence/: Cargo.toml  README.md
intelligence/config/: README.md  intelligence.example.yaml
intelligence/docs/: BUILD_PLAN.md
intelligence/src/: config.rs  decision.rs  detectors.rs  error.rs  feedback.rs  ingestion.rs  intent_builder.rs  lib.rs  main.rs  simulator.rs  state.rs  types.rs
intelligence/src/detectors/: dex_arb.rs  manager.rs
intelligence/src/simulator/: amm.rs  bridge.rs  evaluator.rs  flashloan.rs  gas.rs  mod.rs
intelligence/tests/: end_to_end_test.rs  phase1_test.rs
