[workspace]
members = [
    "dataplane",
    "dataplane/reth_fork",
    "beta_dataplane"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# Blockchain
ethers = { version = "2.0", features = ["ws", "rustls"] }
alloy-primitives = "0.4"
alloy-sol-types = "0.4"

# Data processing
rdkafka = "0.36"
# TODO: Re-enable Arrow/Parquet once compatibility issues are resolved
# arrow = "49.0"
# parquet = "49.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
once_cell = "1.19"

# gRPC
tonic = "0.10"
prost = "0.12"

[workspace.dependencies.tonic-build]
version = "0.10"
