[package]
name = "qenus-beta-dataplane"
version = "0.1.0"
edition = "2021"
authors = ["Qenus Team"]
description = "Production-ready RPC-based dataplane for immediate revenue generation"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# HTTP and WebSocket clients
reqwest = { version = "0.11", features = ["json", "stream"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# Ethereum and blockchain
ethers = { version = "2.0", features = ["ws", "rustls"] }
alloy-primitives = "0.4"
alloy-sol-types = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Data processing and streaming
rdkafka = "0.36"

# Database and caching
redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# gRPC
tonic = "0.10"
prost = "0.12"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"

# Math and calculations
num-bigint = "0.4"
num-traits = "0.2"
num_cpus = "1.16"

# Compression
flate2 = "1.0"
hex = "0.4"

# Parent dataplane types (reuse existing types)
qenus-dataplane = { path = "../dataplane" }

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "beta-dataplane"
path = "src/main.rs"

[lib]
name = "qenus_beta_dataplane"
path = "src/lib.rs"
