[package]
name = "qenus-reth"
version = "0.1.0"
edition = "2021"
authors = ["Qenus Team"]
description = "Lean Ethereum L1 client optimized for real-time feature extraction"
license = "MIT"

[dependencies]
# TODO: Add Reth dependencies when ready for full implementation
# For now, using minimal dependencies to establish structure

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
clap = { version = "4.0", features = ["derive"] }
config = "0.13"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"

# Parent dataplane crate
qenus-dataplane = { path = ".." }

[[bin]]
name = "qenus-reth"
path = "src/main.rs"

[lib]
name = "qenus_reth"
path = "src/lib.rs"